# fastlinear

./: CMakeLists.txt  metrics.py
src/: main.cpp
src/application/: application.hpp  config.h
src/io/: dataset.cpp  dataset.h  file_io.cpp  file_io.h  parser.cpp  parser.hpp
src/linear/: linear.cpp  linear.h
src/metrics/: binary_metrics.hpp
src/objective/: binary_objective.hpp  multiclass_objective.hpp  objective_function.h
src/solver/: lbfgs.cpp  lbfgs.h
src/test/: test_alglib.cpp  test_eigen.cpp  test_lbfgs.cpp
src/utils/: common.h  log.h  openmp_wrapper.h  pipeline_reader.h  random.h  text_reader.h
